finished main script; added db.

--- a/config/config.json
+++ b/config/config.json
@@ -3,11 +3,14 @@
         "DATA_DIR": "data",
         "MIN_FILE_DATE": "11/9/20",
         "FTP_SITE": "ftp://sdrftp03.dor.state.fl.us/Tax%20Roll%20Data%20Files/2020%20Final%20NAL%20-%20SDF%20Files",
+        "DB_HOST": "127.0.0.1",
+        "DB_NAME": "blastpoint",
+        "TABLE_NAME": "nal_property_records",
         "DATA_DOWNLOAD_DIR": "downloads",
         "DOR_CODE_FILE": "config/dor_use_codes.json",
         "CSV_FIELDS": [
-            "CO_NO",
         	"PARCEL_ID",
+            "CO_NO",
             "DOR_UC",
             "JV",
             "ACT_YR_BLT",
@@ -29,11 +32,14 @@
         "DATA_DIR": "data",
         "MIN_FILE_DATE": "11/9/20",
         "FTP_SITE": "ftp://sdrftp03.dor.state.fl.us/Tax%20Roll%20Data%20Files/2020%20Final%20NAL%20-%20SDF%20Files",
+        "DB_HOST": "127.0.0.1",
+        "TABLE_NAME": "nal_property_records",
+        "DB_NAME": "blastpoint",
         "DATA_DOWNLOAD_DIR": "downloads",
         "DOR_CODE_FILE": "config/dor_use_codes.json",
         "CSV_FIELDS": [
-            "CO_NO",
         	"PARCEL_ID",
+            "CO_NO",
             "DOR_UC",
             "JV",
             "ACT_YR_BLT",
