changed db name.

--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
         "MIN_FILE_DATE": "11/9/20",
         "FTP_SITE": "ftp://sdrftp03.dor.state.fl.us/Tax%20Roll%20Data%20Files/2020%20Final%20NAL%20-%20SDF%20Files",
         "DB_HOST": "127.0.0.1",
-        "DB_NAME": "blastpoint",
+        "DB_NAME": "fl_nal_pipeline",
         "DB_USER": "eng_test",
         "TABLE_NAME": "nal_property_records",
         "DATA_DOWNLOAD_DIR": "downloads",
@@ -65,7 +65,7 @@
         "FTP_SITE": "ftp://sdrftp03.dor.state.fl.us/Tax%20Roll%20Data%20Files/2020%20Final%20NAL%20-%20SDF%20Files",
         "DB_HOST": "127.0.0.1",
         "TABLE_NAME": "nal_property_records",
-        "DB_NAME": "blastpoint",
+        "DB_NAME": "fl_nal_pipeline",
         "DB_USER": "eng_test",
         "DATA_DOWNLOAD_DIR": "downloads",
         "DOR_CODE_FILE": "config/dor_use_codes.json",
